Utworzono za pomocą Colab

--- a/Lekcja1_18_15.ipynb
+++ b/Lekcja1_18_15.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOqJ+50iNQsWaqK4Zcp+lB2",
+      "authorship_tag": "ABX9TyOg4m3MJX5mtmt0om1OrX9Q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -191,6 +191,81 @@
             "To https://github.com/AdrianCygan123/kursAI_18-25.git\n",
             " * [new branch]      main -> main\n",
             "Branch 'main' set up to track remote branch 'main' from 'origin'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Print + zmienne\n",
+        "liczba = 5\n",
+        "zmiennoprzecinkowa = 6.9\n",
+        "napis = \"TEKST\"\n",
+        "logiczna = False\n",
+        "print(\"siema\")\n",
+        "print(liczba)\n",
+        "print(f\"Wynik zmiennej liczba: {liczba}, wynik zmiennej napis: {napis}\")\n",
+        "print(\"Wynik zmiennej liczba:\",liczba, \"wynik zmiennej napis:\", napis)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0mHJAFELLgmE",
+        "outputId": "8a207977-86f3-45a2-90d7-5665f1e442ba"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "siema\n",
+            "5\n",
+            "Wynik zmiennej liczba: 5, wynik zmiennej napis: TEKST\n",
+            "Wynik zmiennej liczba: 5 wynik zmiennej napis: TEKST\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Listy + pętla for\n",
+        "lista = [1, \"pies\", \"kot\"]\n",
+        "#print(lista)\n",
+        "#print(lista[1])\n",
+        "\"\"\"\n",
+        "for i in lista:\n",
+        "  print(i)\n",
+        "\n",
+        "for i in range(len(lista)):\n",
+        "  print(lista[i])\n",
+        "\"\"\"\n",
+        "#for i in range(6):\n",
+        "  #print(i)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YMLHPKbGNGkY",
+        "outputId": "95d1655b-9b30-4aa1-e4c7-2d4c562cdf0a"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
           ]
         }
       ]
